platform CRUD implementation + schema additions
- implemented CRUD endpoints for platforms
- added releaseYear to platform model
- udated seed data to include release years for all platforms
- modified platform responses to return game count instead of game object
- made releaseYear required for game creation
- updated openapi documentation
